--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 
 Owens Capstone Project/Capstone Project/.DS_Store
 Owens Capstone Project/Intranet/MontgomeryCup/public_html/.DS_Store
+Owens Capstone Project/.DS_Store
